[tool.poetry]
name = "bot-assistant"
version = "0.1.0"
description = ""
authors = ["Yuliia-Vogel <arwen.vogel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
